--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,4 +11,5 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '1.16.11' # The Go version to download (if necessary) and use.
+      - run: sudo apt-get install golang-github-gotk3-gotk3-dev -y
       - run: go build src/main.go
