--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,8 @@ jobs:
           go-version: '1.16.11' # The Go version to download (if necessary) and use.
       - run: sudo apt-get update
       - run: sudo apt-get install golang-github-gotk3-gotk3-dev -y
-      - run: cd src && go build -o main
+      - run: cd src && go build -o quickmeme
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: src/main
+          files: src/quickmeme
